    to #readpartial and #read.

* XMLRPC::Client
  * New methods:
    * XMLRPC::Client#http. It returns Net::HTTP for the client. Normally,
      it is not needed. It is useful when you want to change minor HTTP client
      options. You can change major HTTP client options by XMLRPC::Client
      methods. You should use XMLRPC::Client methods for changing major
      HTTP client options instead of XMLRPC::Client#http.

=== Stdlib compatibility issues (excluding feature bug fixes)

* Set
  * incompatible changes:
    * Set#to_set now returns self instead of generating a copy.

* URI
  * incompatible changes:
    * URI.decode_www_form follows current WHATWG URL Standard.
      It gets encoding argument to specify the character encoding.
      It now allows loose percent encoded strings, but denies ;-separator.
    * URI.encode_www_form follows current WHATWG URL Standard.
      It gets encoding argument to convert before percent encode.
      UTF-16 strings aren't converted to UTF-8 before percent encode by default.

=== Built-in global variables compatibility issues

* $SAFE
  * $SAFE=4 is obsolete.  If $SAFE is set to 4 or larger, an ArgumentError
    is raised.

=== C API updates

* rb_gc_set_params() is deprecated. This is only used in Ruby internal.

* rb_gc_count() added. This returns the number of times GC occurred.

* rb_postponed_job_register() added. Takes a function callback which is invoked
  when the VM is in a consistent state, i.e. to perform work from a C signal
  handler.

* rb_profile_frames() added. Provides low-cost access to the current ruby stack
  for callstack profiling.

* rb_tracepoint_new() supports new internal events accessible only from C:
  * RUBY_INTERNAL_EVENT_NEWOBJ
  * RUBY_INTERNAL_EVENT_FREEOBJ
  * RUBY_INTERNAL_EVENT_GC_START
  * RUBY_INTERNAL_EVENT_GC_END
  * Note that you *can not* specify "internal events" with normal events
    (such as RUBY_EVENT_CALL, RUBY_EVENT_RETURN) simultaneously.